<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:id="@+id/til_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <EditText
            android:id="@+id/campo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:hint="@string/hint_fecha"
            android:id="@+id/etFecha"
           />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="170dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:id="@+id/campo_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefono"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_gmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="240dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:singleLine="true"
            android:id="@+id/campo_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_gmail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_DescripciónContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="310dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp">
        <EditText
            android:id="@+id/campo_DescripciónContacto"
            android:inputType="textMultiLine"
            android:lines="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_DescripciónContacto"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boton_aceptar"
        android:layout_width="173dp"
        android:layout_height="72dp"
        android:layout_below="@id/til_DescripciónContacto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="validar"
        android:text="@string/accion_aceptar"
        android:textColor="@android:color/white" />
</RelativeLayout>

